--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,16 +7,31 @@
   font-style: normal;
   font-variation-settings: 'wdth' 100;
 }
+
+.header {
+  background-image: url('../images/developer.png'),
+    url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+  background-color: #fff8f3;
+}
 nav {
   display: flex;
+  align-items: center;
+
+  justify-content: space-between;
+  margin: 0px 200px;
 }
+
 nav ul {
   display: flex;
+  align-items: center;
 }
 
 nav ul li {
   display: flex;
   margin-right: 50px;
+  list-style: none;
 }
 
 .nav-title {
@@ -31,13 +46,58 @@ nav ul li {
   color: #fd6e0a;
 }
 
-nav ul li {
-  list-style: none;
-}
 nav li a {
   text-decoration: none;
   font-size: 20px;
 }
 .dark-2 {
   color: #474747;
+}
+
+.btn-primary {
+  background-color: #fd6e0a;
+  color: var(--White-Color, #fff);
+  font-family: 'Open Sans';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 18px 35px;
+  border-radius: 5px;
+  border: none;
+}
+
+/* banner style */
+.banner-grettings {
+  color: var(--Dark-02, #474747);
+  font-family: 'Open Sans';
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.banner-title {
+  color: var(--Dark-01, #181818);
+  font-family: 'Open Sans';
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.banner-profile-pic {
+  width: 580px;
+}
+.banner {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 35px 0 200px;
+}
+
+.banner-content {
+  max-width: 800px;
+}
+.banner-description {
+  text-align: justify;
 }
