--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -101,3 +101,25 @@ nav li a {
 .banner-description {
   text-align: justify;
 }
+
+.section-title {
+  color: var(--Dark-01, #181818);
+
+  font-family: 'Open Sans';
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.section-description {
+  color: var(--Dark-03, #757575);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+.secondary-background {
+  background-color: #fff8f3;
+}
