--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -123,3 +123,134 @@ nav li a {
 .secondary-background {
   background-color: #fff8f3;
 }
+.about-div-name {
+  color: var(--Dark-02, #474747);
+  font-family: 'Open Sans';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  color: var(--Dark-03, #757575);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+
+  padding: 0 10px;
+}
+.row-4-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about-title {
+  align-self: stretch;
+  color: var(--Dark-01, #181818);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.about-sec-des {
+  align-self: stretch;
+  color: var(--Dark-03, #757575);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+.about-sub-div {
+  border: 1px solid #000;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  width: 827px;
+}
+.about-pro-div {
+  border-radius: 10px;
+  background: #fff8f3;
+  flex-shrink: 0;
+  display: flex;
+  justify-items: center;
+  justify-content: center;
+}
+.about-pad {
+  background-color: white;
+  padding-top: 100px;
+}
+.sec-skills-title {
+  color: var(--Dark-01, #181818);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.sec-skills-des {
+  width: 909px;
+  color: var(--Dark-03, #757575);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+.skill-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.icon-skills {
+  width: 44px;
+  height: 44px;
+  flex-shrink: 0;
+}
+.skill-title {
+  color: var(--Dark-01, #181818);
+  text-align: start;
+  font-family: 'Open Sans';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.skill-des {
+  width: 201px;
+  color: var(--Dark-03, #757575);
+  font-family: 'Open Sans';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+.skill-div-1 {
+  width: 267px;
+  height: 377px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  padding: 10px 15px;
+}
+.skill-div-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+.what-i-do {
+  padding-top: 100px;
+  background: var(--White-Color, #fff);
+}
