--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -254,3 +254,101 @@ nav li a {
   padding-top: 100px;
   background: var(--White-Color, #fff);
 }
+.sum-title {
+  color: var(--Dark-01, #181818);
+  text-align: center;
+  font-family: 'Open Sans';
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.edu-div {
+  color: var(--Dark-02, #474747);
+  font-family: 'Open Sans';
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.exp-div {
+  color: var(--Dark-02, #474747);
+  font-family: 'Open Sans';
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.edu-div-title {
+  color: var(--Dark-02, #474747);
+  font-family: 'Open Sans';
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.edu-div-sub-title {
+  color: var(--Dark-03, #757575);
+  font-family: 'Open Sans';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.edu-div-des {
+  width: 511px;
+  color: var(--Dark-03, #757575);
+  font-family: 'Open Sans';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+
+.exp-div-title {
+  color: var(--Dark-02, #474747);
+  font-family: 'Open Sans';
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.exp-div-sub-title {
+  color: var(--Dark-03, #757575);
+  font-family: 'Open Sans';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.exp-div-des {
+  width: 511px;
+  color: var(--Dark-03, #757575);
+  font-family: 'Open Sans';
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+}
+.edu-exp-div {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding: 2px 230px;
+  gap: 50px;
+}
+.sum-title-2sec {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 1px 230px;
+  gap: 50px;
+}
+.my-edu {
+  width: 511px;
+}
+.exp-sec {
+  background-color: white;
+}
